--- a/config/database.yml
+++ b/config/database.yml
@@ -30,9 +30,4 @@ production:
   port: 5432
   database: crm
   user: deploy_rails
-  password: deploy_crmqwe123
-
-
-
-cucumber:
-  <<: *test
+  password: qweasd
