--- a/config/database.yml
+++ b/config/database.yml
@@ -10,7 +10,7 @@ default: &default
   host: localhost
   username: pguser
   password: password
-  port: 5432
+  port: 5432 #gfsdffsdf
 
 development:
   <<: *default
